--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,4 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 message(STATUS "output executable file path:" ${EXECUTABLE_OUTPUT_PATH})
 
 add_executable(${PROJECT_NAME} main.cpp ${SRC_LIST} )
+add_executable(server_ex server_ex.cpp)
